--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,10 +29,17 @@ jobs:
           docker build -t $IMAGE_NAME:latest .
           docker push $IMAGE_NAME:latest
 
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v4
+
       - name: Set up kubeconfig
         run: |
           echo "${{ secrets.KUBE_CONFIG }}" | tr -d '\n' | base64 -d > kubeconfig
           chmod 600 kubeconfig
+
+      - name: Verify cluster access
+        run: |
+          kubectl --kubeconfig=kubeconfig get nodes
 
       - name: Restart Kubernetes deployment
         run: |
