--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/swagger-jsdoc": "^6.0.4",
     "swagger-ui-express": "^4.6.3",
     "swagger-jsdoc": "^6.2.8",
     "@types/jsonwebtoken": "^9.0.10",
